samples/_failures_safe/1761292679_1ad44c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ca3b65b.c: In function ‘main’:
./samples/SAFE/__tmp_9ca3b65b.c:150:26: error: missing terminating " character
  150 |     mat1.rows = read_int("Enter number of rows (1-16
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9ca3b65b.c:150:5: error: expected expression at end of input
  150 |     mat1.rows = read_int("Enter number of rows (1-16
      |     ^~~~
./samples/SAFE/__tmp_9ca3b65b.c:150:17: error: too few arguments to function ‘read_int’
  150 |     mat1.rows = read_int("Enter number of rows (1-16
      |                 ^~~~~~~~
./samples/SAFE/__tmp_9ca3b65b.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_9ca3b65b.c:150:5: error: expected declaration or statement at end of input
  150 |     mat1.rows = read_int("Enter number of rows (1-16
      |     ^~~~
